--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "author": "Tonic Works",
   "scripts": {
-    "test": "echo \"Error: no test specifified\" && exit 1"
+    "test": "node test/test.js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "require-self": "^0.1.0"
+  },
   "dependencies": {
     "minimal-request-promise": "^1.3.0",
     "request": "^2.80.0"
