--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "require-self": "^0.1.0"
   },
   "dependencies": {
+    "currency-formatter": "^1.1.1",
+    "lodash": "^4.17.4",
     "minimal-request-promise": "^1.3.0",
     "request": "^2.80.0"
   },
