--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "currency-formatter": "^1.1.1",
     "lodash": "^4.17.4",
-    "minimal-request-promise": "^1.3.0",
-    "request": "^2.80.0"
+    "minimal-request-promise": "^1.3.0"
   },
   "version": "1.0.0",
   "main": "qx.js"
