--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "currency-formatter": "^1.1.1",
     "lodash": "^4.17.4",
-    "minimal-request-promise": "^1.3.0"
+    "minimal-request-promise": "^1.3.0",
+    "url-join": "^4.0.0"
   },
   "version": "2.1.0",
   "main": "qx.js"
